Last round of rebranding stuff for now.

--- a/other/readme.html
+++ b/other/readme.html
@@ -210,10 +210,6 @@
 							<dd>If Gzip output tests pass, this can be used to save bandwidth and make pages load faster.</dd>
 							<dt>Database Sessions</dt>
 							<dd>Sessions can be stored in the database, or in files. Database sessions are more reliable, secure, and may work better on sites with multiple servers.</dd>
-							<dt>UTF-8 Character Set</dt>
-							<dd>UTF-8 character sets are useful for international forums, or forums that use languages other than English.</dd>
-							<dt>Allow Stat Collection</dt>
-							<dd>This option allows Simple Machines to collect statistics from your forum, anonymously, so the software can grow to meet the needs of its user base.</dd>
 						</dl>
 						<h3>Database server settings</h3>
 						<dl>
@@ -237,7 +233,7 @@
 						<h2 id="i_finishing">Finishing everything up</h2>
 						<p>Once all steps of the installation process have been completed, check the box to remove the install files from the server. If this does not work, they will need to be deleted via FTP. All installer files should be removed from the server once the installation process is complete, as they are a major security risk if left on a server unattended. Once Social Bricks is installed they are no longer needed.</p>
 						<p>Good luck!<br />
-						Simple Machines</p>
+						Social Bricks</p>
 					</div>
 				</div>
 				<div id="upgrade_guide" class="hidden">
@@ -366,7 +362,7 @@
 						<h2 id="u_finishing">Finishing the upgrade and cleaning up</h2>
 						<p>Once all parts of the upgrade have completed, check the box to remove the upgrade files from the server. If this does not work, they will need to be deleted via FTP. All upgrade files should be removed from the server once the upgrade process is complete. These files are upgrade.php and the .sql files whose name starts with 'upgrade'. They are a major security risk if they are left on a server unattended. Once Social Bricks has been upgraded, they are no longer needed.</p>
 						<p>Good luck!<br />
-						Simple Machines</p>
+						Social Bricks</p>
 					</div>
 				</div>
 			</div>
@@ -375,7 +371,7 @@
 	<div id="footer">
 		<ul>
 			<li class="copyright"><a rel="license" href="https://creativecommons.org/licenses/by-sa/3.0/" target="_blank"><img alt="Creative Commons License" style="border-width:0; margin-bottom: 0.7em;" src="https://i.creativecommons.org/l/by-sa/3.0/80x15.png" /></a><br />This work is licensed under a <a rel="license" href="https://creativecommons.org/licenses/by-sa/3.0/" target="_blank">Creative Commons Attribution-ShareAlike 3.0 Unported License</a>.</li>
-			<li><a href="https://www.simplemachines.org" target="_blank" rel="noopener">Simple Machines Forum</a></li>
+			<li><a href="https://socialbricks.org" target="_blank" rel="noopener">Social Bricks</a></li>
 		</ul>
 	</div>
 </body>
